# veracross-client

./: .readthedocs.yml  README.md  pyproject.toml  requirements.txt  sample_config.json  setup.cfg  setup.py
docs/: api_reference.rst  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: api_reference.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api_reference.rst.txt
src/veracross_client/: __init__.py  veracross_client.py
